system.h: Poison strndup (PR bootstrap/78616)

gcc/ChangeLog:
	PR bootstrap/78616
	* system.h: Poison strndup.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@244494 138bc75d-0d04-0410-961f-82ee72b054a4